[package]
name = "curve25519"
version = "0.1.0"
authors = ["eschorn@integritychain.com <eschorn@integritychain.com>"]
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1.3.0"  # This should not be here
num-bigint = { version = "0.2.0", features = ["rand"] }
num-traits = "0.2.8"
rand = "0.5.4"


[dev-dependencies]
rand = "0.5.4"
lazy_static = "1.3.0"

